# icecast-kh

./: .gitignore  GIT-VERSION-GEN  HACKING  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  configure  configure.ac  configure.in  libtool
.github/workflows/: codeql.yml
admin/: Makefile  Makefile.in  flashpolicy  listclients.xsl  listmounts.xsl  logs.xsl  manageauth.xsl  managerelays.xsl  moveclients.xsl  response.xsl  showlog.xsl  stats.xsl  updatemetadata.xsl
admin/.svn/: all-wcprops  dir-prop-base  entries
conf/: Makefile.am  Makefile.in  i686-w64-mingw32.nsis.in  icecast.xml.in  x86_64-w64-mingw32.nsis.in
doc/: Makefile.in  icecast2_config_file.html  icecast2_listenerauth.html
examples/: icecast.xml  icecast_minimal.xml  icecast_shoutcast_compat.xml
m4/: acx_pthread.m4  ogg.m4  speex.m4  theora.m4  vorbis.m4  xiph_compiler.m4  xiph_curl.m4  xiph_net.m4  xiph_openssl.m4  xiph_path_python.m4  xiph_xml2.m4
src/: Makefile.am  Makefile.in  admin.c  admin.h  auth.c  auth.h  auth_cmd.c  auth_cmd.h  auth_htpasswd.c  auth_htpasswd.h  auth_url.c  auth_url.h  avio_reading.c  cfgfile.c  cfgfile.h  client.c  client.h  compat.h  connection.c  connection.h  curl_ice.h  event.c  flv.c  flv.h  format.c  format.h  format_ebml.c  format_ebml.h  format_flac.c  format_flac.h  format_kate.c  format_midi.c  format_mp3.c  format_mp3.h  format_ogg.c  format_ogg.h  format_opus.c  format_skeleton.c  format_speex.c  format_speex.h  (+32 more)
src/avl/: Makefile.am  Makefile.in  avl.c  avl.h
src/httpp/: Makefile.am  Makefile.in  httpp.c  httpp.h
src/log/: Makefile.am  Makefile.in  log.c  log.h
src/net/: Makefile.am  Makefile.in  resolver.c  sock.c  sock.h
src/thread/: Makefile.am  Makefile.in  thread.c  thread.h
src/timing/: Makefile.am  Makefile.in  timing.c
web/: Makefile.in  admin.html  adminbar.html  auth.xsl  index.html  server_version.xsl  status.xsl  status2.xsl  statusbar.html  style.css
web/images/: Makefile.am  Makefile.in
win32/: Makefile.am  Makefile.in  icecast.nsis  icecast64.nsis  icecastService.cpp
win32/res/: Makefile.in
windows/: Makefile.am  Makefile.in  icecast.nsis  icecastService.cpp
windows/res/: Makefile.in
